:sparkles: Demo page added and some fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,11 @@
       "dom"
     ],
     "paths": {
-      "angular-svg2": [
-        "dist/angular-svg2"
+      "angular-svg": [
+        "dist/angular-svg"
       ],
-      "angular-svg2/*": [
-        "dist/angular-svg2/*"
+      "angular-svg/*": [
+        "dist/angular-svg/*"
       ]
     }
   },
