--- a/angular.json
+++ b/angular.json
@@ -3,33 +3,33 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-svg2": {
+    "angular-svg": {
       "projectType": "library",
-      "root": "projects/angular-svg2",
-      "sourceRoot": "projects/angular-svg2/src",
+      "root": "projects/angular-svg",
+      "sourceRoot": "projects/angular-svg/src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/angular-svg2/tsconfig.lib.json",
-            "project": "projects/angular-svg2/ng-package.json"
+            "tsConfig": "projects/angular-svg/tsconfig.lib.json",
+            "project": "projects/angular-svg/ng-package.json"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/angular-svg2/src/test.ts",
-            "tsConfig": "projects/angular-svg2/tsconfig.spec.json",
-            "karmaConfig": "projects/angular-svg2/karma.conf.js"
+            "main": "projects/angular-svg/src/test.ts",
+            "tsConfig": "projects/angular-svg/tsconfig.spec.json",
+            "karmaConfig": "projects/angular-svg/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/angular-svg2/tsconfig.lib.json",
-              "projects/angular-svg2/tsconfig.spec.json"
+              "projects/angular-svg/tsconfig.lib.json",
+              "projects/angular-svg/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -37,6 +37,128 @@
           }
         }
       }
+    },
+    "demo-page": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/demo-page",
+      "sourceRoot": "projects/demo-page/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/demo-page",
+            "index": "projects/demo-page/src/index.html",
+            "main": "projects/demo-page/src/main.ts",
+            "polyfills": "projects/demo-page/src/polyfills.ts",
+            "tsConfig": "projects/demo-page/tsconfig.app.json",
+            "aot": false,
+            "assets": [
+              "projects/demo-page/src/favicon.ico",
+              "projects/demo-page/src/assets"
+            ],
+            "styles": [
+              "projects/demo-page/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/demo-page/src/environments/environment.ts",
+                  "with": "projects/demo-page/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "demo-page:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "demo-page:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "demo-page:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/demo-page/src/test.ts",
+            "polyfills": "projects/demo-page/src/polyfills.ts",
+            "tsConfig": "projects/demo-page/tsconfig.spec.json",
+            "karmaConfig": "projects/demo-page/karma.conf.js",
+            "assets": [
+              "projects/demo-page/src/favicon.ico",
+              "projects/demo-page/src/assets"
+            ],
+            "styles": [
+              "projects/demo-page/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/demo-page/tsconfig.app.json",
+              "projects/demo-page/tsconfig.spec.json",
+              "projects/demo-page/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/demo-page/e2e/protractor.conf.js",
+            "devServerTarget": "demo-page:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "demo-page:serve:production"
+            }
+          }
+        }
+      }
     }},
-  "defaultProject": "angular-svg2"
+  "defaultProject": "angular-svg"
 }
