--- a/projects/angular-svg/package.json
+++ b/projects/angular-svg/package.json
@@ -2,7 +2,7 @@
   "name": "@panacea-coop/angular-svg",
   "description": "A Angular2 (or more) library to use svg components and leverage angular features. Inline angular binding with svg",
   "author": "https://github.com/panacea-coop/angular-svg/graphs/contributors",
-  "version": "3.0.0-beta.2",
+  "version": "3.0.0",
   "peerDependencies": {
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14"
