--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,12 @@
             "tsConfig": "projects/angular-svg/tsconfig.lib.json",
             "project": "projects/angular-svg/ng-package.json"
           }
-        },
+        ,          "configurations": {
+            "production": {
+              "tsConfig": "projects/angular-svg/tsconfig.lib.prod.json"
+            }
+          }
+},
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -57,7 +62,7 @@
             "main": "projects/demo-page/src/main.ts",
             "polyfills": "projects/demo-page/src/polyfills.ts",
             "tsConfig": "projects/demo-page/tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "projects/demo-page/src/favicon.ico",
               "projects/demo-page/src/assets"
@@ -80,7 +85,6 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
