:sparkles: All ok to be compatible with Angular 9

--- a/projects/angular-svg/package.json
+++ b/projects/angular-svg/package.json
@@ -7,8 +7,8 @@
     "postinstall": "ngcc"
   },
   "peerDependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14"
+    "@angular/common": "~9.1.13",
+    "@angular/core": "~9.1.13"
   },
   "repository": {
     "type": "git",
