--- a/projects/angular-svg/package.json
+++ b/projects/angular-svg/package.json
@@ -2,13 +2,13 @@
   "name": "@panacea-coop/angular-svg",
   "description": "A Angular2 (or more) library to use svg components and leverage angular features. Inline angular binding with svg",
   "author": "https://github.com/panacea-coop/angular-svg/graphs/contributors",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "scripts": {
     "postinstall": "ngcc"
   },
   "peerDependencies": {
-    "@angular/common": "~9.1.13",
-    "@angular/core": "~9.1.13"
+    "@angular/common": "^10.0.0",
+    "@angular/core": "^10.0.0"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,12 @@
     "url": "https://github.com/panacea-coop/angular-svg/issues"
   },
   "homepage": "https://github.com/panacea-coop/angular-svg#readme",
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
+  "schematics": "./schematics/collection.json",
+  "ng-add": {
+    "save": "dependencies"
+  },
   "keywords": ["angular", "ng", "svg", "angular-svg", "svgpolygon", "svgcircle", "svgtext", "svgpath", "svgline"]
 }
