--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,6 @@
             "main": "projects/demo-page/src/main.ts",
             "polyfills": "projects/demo-page/src/polyfills.ts",
             "tsConfig": "projects/demo-page/tsconfig.app.json",
-            "aot": true,
             "assets": [
               "projects/demo-page/src/favicon.ico",
               "projects/demo-page/src/assets"
@@ -70,7 +69,13 @@
             "styles": [
               "projects/demo-page/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -100,7 +105,8 @@
                 }
               ]
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
